<resources>
    <string name="app_name">ReportMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_description">Logo</string>
    <string name="welcome_btn">submit report</string>
    <string name="welcome_message">Welcome to ReportMate, the reporting app for violence or crimes against public. you can submit a report else should you wish to direct response to what has happened, please contact the police on 101</string>
    <string name="submit_report_firstmessage">Let\'s get started</string>
    <string name="question_1">Location</string>
    <string name="q1_ans_1">current location</string>
    <string name="q1_ans_2">select location</string>
    <string name="question_2">Date and Time</string>
    <string name="q2_ans_1">now</string>
    <string name="q2_ans_2">select time</string>
    <string name="time">Time</string>
    <string name="timeformat">00:00</string>
    <string name="map_id">a8377c51520d419e</string>
    <string name="selectaddress">Select</string>
    <string name="back_btn">Home</string>
    <string name="summary">Summary</string>
    <string name="when">When ?</string>
    <string name="where">Where ?</string>
    <string name="enter_phone_number">Enter phonenumber</string>
    <string name="enter_description">Enter Description</string>
    <string name="type">Type ?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="select_images_from_gallery">Select Images</string>
    <string name="upload_images">Upload Images</string>
    <string name="discard">Discard</string>
    <string name="skip">Skip</string>
    <string name="msg_token_fmt">Firebase Token: %1$s</string>
    <string name="viewreports">View Reports</string>
    <string name="search">Search</string>
    <string name="your_reports">Your Reports</string>
</resources>