<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".view.fragments.WelcomeFragment"
    android:background="@drawable/gradient">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/bg_image" />

    <TextView
        android:id="@+id/paraTextView"
        android:layout_width="343dp"
        android:layout_height="96dp"
        android:layout_marginTop="25dp"
        android:autoSizeTextType="uniform"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onButtonClick"
        android:text="@string/welcome_btn"
        android:backgroundTint="#cd3269"
        android:id="@+id/submitbtn"
        />
    <Button
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onButtonClick"
        android:text="@string/viewreports"
        android:backgroundTint="#cd3269"
        android:id="@+id/viewReportsBtn"
        />
    <Button
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onButtonClick"
        android:text="@string/discard"
        android:backgroundTint="#cd3269"
        android:id="@+id/discardBtn"
        />

</LinearLayout>