<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragments.SelectImagesFragment"
    android:background="@drawable/gradient"
    android:layout_marginTop="20dp">

    <!-- ImageSwitcher -->
    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="395dp"
        android:layout_height="403dp"
        android:layout_marginTop="15dp"/>

    <!-- Previous Button -->
    <Button
        android:id="@+id/previousBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageSwitcher"
        android:text="@string/previous"/>

    <!-- Next Button -->
    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/imageSwitcher"
        android:text="@string/next"/>

    <!-- Buttons for Select Images and Upload Images -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nextBtn"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <!-- Select Images Button -->
        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/select_images_from_gallery"
        android:layout_gravity="center"
       />

        <!-- Upload Images Button -->
        <Button
            android:id="@+id/uploadImageButton"
            android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/upload_images"
        android:layout_gravity="center"
       />

        <!-- Discard Button -->
        <Button
            android:id="@+id/discardButton"
            android:layout_width="200dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:text="@string/discard"
        android:layout_gravity="center"
        />
    </LinearLayout>

</RelativeLayout>
