<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.fragments.FinalFragment"
    android:background="@drawable/gradient"
    android:layout_marginTop="20dp">

    <!-- Navigation Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <!-- Label 1 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <!-- Text View 1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"/>

    <!-- Line Separator 1 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <!-- Label 2 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <!-- Text View 2 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"/>

    <!-- Line Separator 2 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <!-- Label 3 -->

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Line Separator 2 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <!-- Label 3 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <!-- Crime Type Spinner -->
    <Spinner
        android:id="@+id/crimeTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="#000000"
        android:spinnerMode="dropdown"
        android:layout_marginTop="16dp"
        />
    <!-- Line Separator 3 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <!-- Label 3 -->
    <!-- Description EditText -->
    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="4"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />
    <!-- Line Separator 3 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <!-- Submit button -->
    <Button
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onButtonClick"
        android:text="@string/welcome_btn"
        android:backgroundTint="#cd3269"
        android:layout_gravity="center"
        android:id="@+id/submitbtn"
        />
</LinearLayout>
</ScrollView>
